--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -31,6 +31,8 @@ jobs:
   test:
     runs-on: ubuntu-24.04
 
+    needs: build
+
     steps:
       - name: Download docker image
         uses: actions/download-artifact@v4
@@ -38,7 +40,7 @@ jobs:
           name: movie-app-image
       
       - name: Load image
-        run: gunzip -c image.tar.gz | docker Load
+        run: gunzip -c image.tar.gz | docker load
 
       - name: Run tests
         run: docker run --rm --network host -e TMDB_API_KEY=${{ secrets.TMDB_API_KEY }} -e GROQ_API_KEY=${{ secrets.GROQ_API_KEY }} movie-app:latest pytest
