--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -1,52 +1,52 @@
-name: Movie Query Engine CI2
+# name: Movie Query Engine CI2
 
-on:
-  push:
-    branches:
-      - main
-      - develop
-      - develop_v1
-  pull_request:
-    branches:
-      - main
-      - develop
+# on:
+#   push:
+#     branches:
+#       - main
+#       - develop
+#       - develop_v1
+#   pull_request:
+#     branches:
+#       - main
+#       - develop
 
-jobs:
-  build:
-    runs-on: ubuntu-24.04
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      
-      - name: Build Docker image
-        run: docker build -t movie-app:latest .
-  
-      - name: Save Docker image
-        run: docker save movie-app:latest | gzip > image.tar.gz
+# jobs:
+#   build:
+#     runs-on: ubuntu-24.04
 
-      - name: Upload Docker image artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: movie-app-image
-          path: image.tar.gz
-  
-  test:
-    runs-on: ubuntu-24.04
-    needs: build
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
 
-    steps:
-      - name: Download Docker image artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: movie-app-image
-      
-      - name: Load Docker image
-        run: gunzip -c image.tar.gz | docker load
+#       - name: Build Docker image
+#         run: docker build -t movie-app:latest .
 
-      - name: Run tests inside container
-        run: |
-          docker run --rm \
-            -e TMDB_API_KEY=${{ secrets.TMDB_API_KEY }} \
-            -e GROQ_API_KEY=${{ secrets.GROQ_API_KEY }} \
-            movie-app:latest pytest
+#       - name: Save Docker image
+#         run: docker save movie-app:latest | gzip > image.tar.gz
+
+#       - name: Upload Docker image artifact
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: movie-app-image
+#           path: image.tar.gz
+
+#   test:
+#     runs-on: ubuntu-24.04
+#     needs: build
+
+#     steps:
+#       - name: Download Docker image artifact
+#         uses: actions/download-artifact@v4
+#         with:
+#           name: movie-app-image
+
+#       - name: Load Docker image
+#         run: gunzip -c image.tar.gz | docker load
+
+#       - name: Run tests inside container
+#         run: |
+#           docker run --rm \
+#             -e TMDB_API_KEY=${{ secrets.TMDB_API_KEY }} \
+#             -e GROQ_API_KEY=${{ secrets.GROQ_API_KEY }} \
+#             movie-app:latest pytest
